v1.1.0
- NEW: Dedicated WooCommerce integration CSS.
- NEW: WooCommerce's quantity form input will have minus (-) and plus (+) button.
- NEW: WooCommerce's quantity form input will have minus (-) and plus (+) button.
- NEW: Add CSS compatibility for older browsers like IE11 and Safari iOS 9.
- TWEAK: Allow header logo to be placed on all header sections.
- TWEAK: Allow HTML header element to be placed on mobile header section.
- TWEAK: Improve general typography CSS for better readibility.
- TWEAK: Improve admin page styles to help first time users to get started.
- TWEAK: Update Google Fonts list to the latest one.
- FIX: Customizer dimensions control doesn't show the saved unit value correctly.

v1.0.14
- TWEAK: Improve logo's vertical alignment CSS.

v1.0.13
- TWEAK: Improve javascript that makes header sub menu aligned properly.
- FIX: Button and form input typography should inherit base typography.

v1.0.12
- TWEAK: Improve WooCommerce checkout page structures for compatibility with 3rd party plugins.
- TWEAK: Improve WooCommerce 2 columns layout checkout page styles.
- FIX: Base CSS for iframe.

v1.0.11
- NEW: Elementor compatibility CSS.
- NEW: Brizy Integration option: disable Brizy's reset CSS.
- NEW: Footer copyright text now supports new syntax {{theme}}.
- TWEAK: Improve theme's CSS to be slightly slimmer.
- TWEAK: Improve image width on any Gutenberg embed block with image type.

v1.0.10
- NEW: Brizy Integration option: use theme's content width as Brizy content width.
- TWEAK: Improve HTML markup of WooCommerce's "added to cart" message.
- FIX: Page header title text on products search results page should show "Search results for ...".

v1.0.9
- TWEAK: Improve mobile header menu's dropdown sign style.
- TWEAK: Improve WooCommerce template modifications.
- TWEAK: Improve minor WooCommerce CSS.
- FIX: Social media links can't open in new tab.

v1.0.8
- NEW: Add the new `wp_body_open()` theme hook (WordPress 5.2 compatibility).